Fixed ajax loader position and widgetMetaData spacing

--- a/goobi-viewer-core/src/main/resources/META-INF/resources/resources/css/less/widgets/widgetMetadata.less
+++ b/goobi-viewer-core/src/main/resources/META-INF/resources/resources/css/less/widgets/widgetMetadata.less
@@ -3,7 +3,6 @@
    style declarations for widget_metadata.xhtml
    ==============================================================*/
 #widgetMetadata {
-    h2 {}
     dl {
         dt {}
         dd {
@@ -15,14 +14,16 @@
         	}
         }
     }
-    .meta-museal {
-    	
-    }
 }
 
 .widget-metadata {
-	&__lido {}
-	&__events {}
+	&__topbar {
+		margin-top: 20px;
+	}
+
+	&__topbar:first-child {
+		margin-top: none;
+	}
 }
 
 
