--- a/goobi-viewer-core/src/main/resources/META-INF/resources/resources/css/less/widgets/widgets.less
+++ b/goobi-viewer-core/src/main/resources/META-INF/resources/resources/css/less/widgets/widgets.less
@@ -17,6 +17,13 @@
   	.fa {
 		margin-left: auto;
   	 }
+	 
+  	&__icons-container {
+		display: flex;
+		justify-content: flex-start;
+		align-items: center;
+		gap: 5px;
+  	}
   }
 
   &__title {
